--- a/requirements.txt
+++ b/requirements.txt
@@ -7,40 +7,19 @@
 
 -i https://pypi.org/simple
 anyio==3.5.0; python_full_version >= '3.6.2'
-arrow==1.2.2; python_version >= '3.6'
-attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-boto3==1.21.4
-botocore==1.24.4; python_version >= '3.6'
-bravado-core==5.17.0; python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-bravado==11.0.3
+boto3==1.21.29
+botocore==1.24.29; python_version >= '3.6'
 certifi==2021.10.8
 charset-normalizer==2.0.12; python_version >= '3'
-fastapi==0.74.1
-fqdn==1.5.1
+fastapi==0.75.0
 idna==3.3; python_version >= '3'
-isoduration==20.11.0
-jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
-jsonpointer==2.2
-jsonref==0.2
-jsonschema[format]==4.4.0; python_version >= '3.7'
-monotonic==1.6
-msgpack==1.0.3
+jmespath==1.0.0; python_version >= '3.7'
 pydantic==1.9.0
-pyrsistent==0.18.1; python_version >= '3.7'
 python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytz==2021.3
-pyyaml==6.0; python_version >= '3.6'
 requests==2.27.1
-rfc3339-validator==0.1.4
-rfc3987==1.3.8
-s3transfer==0.5.1; python_version >= '3.6'
-simplejson==3.17.6; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
+s3transfer==0.5.2; python_version >= '3.6'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.2.0; python_version >= '3.5'
 starlette==0.17.1; python_version >= '3.6'
-swagger-spec-validator==2.7.4
 typing-extensions==4.1.1; python_version >= '3.6'
-uri-template==1.1.0
-urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
-webcolors==1.11.1
-xlrd==2.0.1
+urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
