--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,6 @@ coverage = "*"
 pytest-cov = "*"
 ipykernel = "*"
 variation-normalizer = "*"
-click = "*"
 openpyxl = "*"
 pandas = "*"
+asyncclick = "*"
