--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,6 +19,7 @@ argcomplete==2.0.0; python_version >= '3.6'
 argh==0.26.2
 asgiref==3.5.0; python_version >= '3.7'
 asttokens==2.0.5
+asyncclick==8.0.3.2
 asyncpg==0.25.0; python_version >= '3.6'
 attrs==21.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 backcall==0.2.0
@@ -32,7 +33,7 @@ canonicaljson==1.6.0; python_version ~= '3.7'
 certifi==2021.10.8
 cfgv==3.3.1; python_full_version >= '3.6.1'
 charset-normalizer==2.0.12; python_version >= '3'
-click==8.1.2
+click==8.1.2; python_version >= '3.7'
 coloredlogs==15.0.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 configparser==5.2.0; python_version >= '3.6'
 coverage==6.3.2
