--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pydantic = "*"
+pydantic = "==2.*"
 requests = "*"
 fastapi = "*"
 boto3 = "*"
@@ -21,7 +21,7 @@ flake8-import-order = "*"
 coverage = "*"
 pytest-cov = "*"
 ipykernel = "*"
-variation-normalizer = ">= 0.4.0a7"
+variation-normalizer = "~=0.8.0.dev0"
 openpyxl = "*"
 pandas = "*"
 asyncclick = "*"
