--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ python_requires = >=3.7
 zip_safe = False
 
 install_requires =
-    pydantic
+    pydantic == 2.*
     requests
     fastapi
     boto3
@@ -35,7 +35,7 @@ tests_require =
 
 [options.extras_require]
 dev =
-    variation-normalizer >= 0.4.0a7
+    variation-normalizer ~= 0.8.0.dev0
     asyncclick
     openpyxl
     pandas
