--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dynamic = ["version"]
 
 [project.optional-dependencies]
 etl = [
-    "variation-normalizer~= 0.8.0.dev0",
+    "variation-normalizer~= 0.11.0",
     "asyncclick",
     "openpyxl",
     "pandas",
